:adhesive_bandage: 자바 17 스펙에 맞게 변경